exports[`test should renders <DeviceDetail> correctly 1`] = `
<div>
  <HelmetWrapper
    title="範例 A 的測試裝置" />
  <MobileHeader
    leftChildren={
      <MobileHeaderIcon
        component={[Function]}
        to={[Function]}>
        <IconArrowLeft
          size="1em" />
      </MobileHeaderIcon>
    }
    rightChildren={
      Array [
        <MobileHeaderIcon
          component={[Function]}
          onClick={[Function]}>
          <IconMoreVert
              size="1em" />
      </MobileHeaderIcon>,
        false,
      ]
    }
    title="範例 A 的測試裝置" />
  <main>
    <PullToRefresh
      IconArrow={[Function]}
      IconLoading={[Function]}
      isLoading={false}
      onPull={[Function]}>
      <div>
        <styled.div
          size="cover"
          src="https://img.mediatek.com/600/mtk.linkit/productBanner.png" />
        <styled.div>
          <styled.div />
        </styled.div>
      </div>
    </PullToRefresh>
  </main>
</div>
`;

exports[`test should renders <DeviceDetail> correctly when Menu show 1`] = `
<div>
  <HelmetWrapper
    title="範例 A 的測試裝置" />
  <MobileHeader
    leftChildren={
      <MobileHeaderIcon
        component={[Function]}
        to={[Function]}>
        <IconArrowLeft
          size="1em" />
      </MobileHeaderIcon>
    }
    rightChildren={
      Array [
        <MobileHeaderIcon
          component={[Function]}
          onClick={[Function]}>
          <IconMoreVert
              size="1em" />
      </MobileHeaderIcon>,
        <Overlay
          alignConfig={
              Object {
                  "offset": Array [
                    20,
                    -20,
                  ],
                  "points": Array [
                    "tr",
                    "bc",
                  ],
                }
          }
          onClickOutSide={[Function]}
          transitionConfig={
              Object {
                  "component": false,
                  "enter": Object {
                    "translateY": 0,
                  },
                  "leave": Object {
                    "translateY": -10,
                  },
                }
          }>
          <Menu>
              <Styled(Link)
                  to={[Function]}>
                  <MenuItem>
                      deviceIntro
                  </MenuItem>
              </Styled(Link)>
              <Styled(Link)
                  to={[Function]}>
                  <MenuItem>
                      triggerAndAction
                  </MenuItem>
              </Styled(Link)>
          </Menu>
      </Overlay>,
      ]
    }
    title="範例 A 的測試裝置" />
  <main>
    <PullToRefresh
      IconArrow={[Function]}
      IconLoading={[Function]}
      isLoading={false}
      onPull={[Function]}>
      <div>
        <styled.div
          size="cover"
          src="https://img.mediatek.com/600/mtk.linkit/productBanner.png" />
        <styled.div>
          <styled.div />
        </styled.div>
      </div>
    </PullToRefresh>
  </main>
</div>
`;

exports[`test should return messages 1`] = `
Object {
  "DeviceDetail.deviceIntro": Object {
    "defaultMessage": "測試裝置介紹",
    "description": "dropdown",
    "id": "DeviceDetail.deviceIntro",
  },
  "DeviceDetail.triggerAndAction": Object {
    "defaultMessage": "觸發條件與動作",
    "description": "dropdown",
    "id": "DeviceDetail.triggerAndAction",
  },
}
`;
